--- a/webapp/assets/css/registro.css
+++ b/webapp/assets/css/registro.css
@@ -1,314 +1,312 @@
 /*MENU*/
 
-.dropdownmenu ul, .dropdownmenu li {
-    margin: 0;
-    padding: 0;
-  }
-  .dropdownmenu ul {
-    background: gray;
-    list-style: none;
-    width: 100%;
-    
-  }
-  .dropdownmenu li {
-    float: left;
-    position: relative;
-    width: auto;
-  }
-  .dropdownmenu a {
-    background: #d0d0d0;
-    color: #000000;
-    display: block;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 15px 30px;
-    text-align: center;
-    text-decoration: none;
-    -webkit-transition: all .25s ease;
-    -moz-transition: all .25s ease;
-    -ms-transition: all .25s ease;
-    -o-transition: all .25s ease;
-    transition: all .25s ease;
-  }
-  .dropdownmenu li:hover a {
-    background: #ffffff;
-    color: #000000;
-  }
-  #submenu {
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 35px;
-    visibility: hidden;
-    z-index: 1;
-  
-  }
-  li:hover ul#submenu {
-    opacity: 1;
-    top: 40px;
-    visibility: visible;
-  }
-  #submenu li {
-    float: none;
-    width: 100%;
-  }
-  #submenu a:hover {
-    background: #001660;
-    color: #ffffff;
-  }
-  #submenu a {
-    background-color: #ffffff;
-  }
+.dropdownmenu ul,
+.dropdownmenu li {
+  margin: 0;
+  padding: 0;
+}
+.dropdownmenu ul {
+  background: gray;
+  list-style: none;
+  width: 100%;
+}
+.dropdownmenu li {
+  float: left;
+  position: relative;
+  width: auto;
+}
+.dropdownmenu a {
+  background: #d0d0d0;
+  color: #000000;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.dropdownmenu li:hover a {
+  background: #ffffff;
+  color: #000000;
+}
+#submenu {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 35px;
+  visibility: hidden;
+  z-index: 1;
+}
+li:hover ul#submenu {
+  opacity: 1;
+  top: 40px;
+  visibility: visible;
+}
+#submenu li {
+  float: none;
+  width: 100%;
+}
+#submenu a:hover {
+  background: #001660;
+  color: #ffffff;
+}
+#submenu a {
+  background-color: #ffffff;
+}
 
 .contenido {
-    padding: 2rem;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-    margin-bottom: 30px;
-  }
-    
-    .contenido .heading {
-      font-size: 1.3rem;
-      margin-bottom: 20px;
-      font-weight: bolder;
-    }
+  padding: 2rem;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
 
-    .titulos{
-        padding: 20px;
-        align-items: center;
-        justify-content: center;
-      }
-      
-    .line {
-        width: 100%;
-        height: 1px;
-        margin-top: 20px;
-        border: 1px #696969 solid;
-    }
+.contenido .heading {
+  font-size: 1.3rem;
+  margin-bottom: 20px;
+  font-weight: bolder;
+}
+
+.titulos {
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  margin-top: 20px;
+  border: 1px #696969 solid;
+}
 /* Estilos para la card */
 .form-container {
-    max-width: 500px; /* Asegura un ancho máximo */
-    width: 100%; /* Ocupa todo el ancho disponible en pantallas más pequeñas */
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 6px 12px -2px,
-        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    box-sizing: border-box;
-    overflow: hidden;
-    padding: 20px; /* Añade relleno */
-    margin: 15px; 
+  max-width: 500px; /* Asegura un ancho máximo */
+  width: 100%; /* Ocupa todo el ancho disponible en pantallas más pequeñas */
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 20px; /* Añade relleno */
+  margin: 15px;
 }
 
 .regresar {
-    width: 155px; 
-    height: 37px;
-    background: #41538F;
-    border-radius: 13px;
-    color: white;
-    margin-top: 30px;
-    margin-left: 30px;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    line-height: 37px;
-    transition: width 0.3s, margin-left 0.3s;
+  width: 155px;
+  height: 37px;
+  background: #41538f;
+  border-radius: 13px;
+  color: white;
+  margin-top: 30px;
+  margin-left: 30px;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 37px;
+  transition: width 0.3s, margin-left 0.3s;
 }
 
-.positionButton{
-    margin-right: 50%;
-    width: 155px;
-    height: 20px;
+.positionButton {
+  margin-right: 50%;
+  width: 155px;
+  height: 20px;
 }
-.continuar{
-    width: 155px; /* Ancho fijo en pantallas más grandes */
-    height: 37px;
-    background: #41538F;
-    border-radius: 13px;
-    color: white;
-    margin-top: 30px;
-    margin-left: 30px;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    line-height: 37px;
-    transition: width 0.3s, margin-left 0.3s; /* Animación suave en los cambios */
+.continuar {
+  width: 155px; /* Ancho fijo en pantallas más grandes */
+  height: 37px;
+  background: #41538f;
+  border-radius: 13px;
+  color: white;
+  margin-top: 30px;
+  margin-left: 30px;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 37px;
+  transition: width 0.3s, margin-left 0.3s; /* Animación suave en los cambios */
 }
 
 .form {
-    width: 100%;
-    box-sizing: border-box;
-    color: #0e2954;
+  width: 100%;
+  box-sizing: border-box;
+  color: #0e2954;
 }
 
 .form-title {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    font-size: 22px;
-    font-weight: 700;
-    text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .form-sub-title {
-    margin: 0;
-    font-size: 15px;
-    font-weight: 500;
-    text-align: center;
-    margin-top: 25px;
-    margin-bottom: 25px;
+  margin: 0;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .login-card,
 .password-card {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    width: 100%;
-    transition: all 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
+  transition: all 0.3s ease-in-out;
 }
 
 .field-container {
-    border: 1px solid #a7a7a7;
-    border-radius: 8px;
-    width: 100%;
-    height: 45px;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    background: #fff;
+  border: 1px solid #a7a7a7;
+  border-radius: 8px;
+  width: 100%;
+  height: 45px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  background: #fff;
 }
 
 .input {
-    width: 100%;
-    height: 100%;
-    padding: 5px 10px;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    background: transparent;
-    color: #0e2954; /* Color del texto */
+  width: 100%;
+  height: 100%;
+  padding: 5px 10px;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: #0e2954; /* Color del texto */
 }
 
 .placeholder {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    color: #a7a7a7;
-    transition: all 0.3s ease;
-    font-size: 16px;
-    pointer-events: none; /* Asegura que el label no interfiera con la entrada */
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  color: #a7a7a7;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  pointer-events: none; /* Asegura que el label no interfiera con la entrada */
 }
 
 .input:focus ~ .placeholder,
 .input:not(:placeholder-shown) ~ .placeholder {
-    top: -5px;
-    left: 10px;
-    font-size: 12px;
-    color: #0e2954; /* Color del placeholder cuando el input está enfocado o lleno */
-    background: #fff;
-    padding: 0 5px;
+  top: -5px;
+  left: 10px;
+  font-size: 12px;
+  color: #0e2954; /* Color del placeholder cuando el input está enfocado o lleno */
+  background: #fff;
+  padding: 0 5px;
 }
 
 .btn {
-    width: 100px;
-    height: 40px;
-    border-radius: 8px;
-    box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
-    background: #0e2954;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
+  width: 100px;
+  height: 40px;
+  border-radius: 8px;
+  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
+  background: #0e2954;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .btn:hover {
-    background: #324b79; /* Color del botón al pasar el cursor */
+  background: #324b79; /* Color del botón al pasar el cursor */
 }
 
 .btn:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .btn-label {
-    font-size: 15px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
+  font-size: 15px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
 }
 
 .toggle-input:checked ~ .login-card {
-    display: none;
+  display: none;
 }
 
 .toggle-input:checked ~ .password-card {
-    display: flex;
+  display: flex;
 }
-
 
 /*formulario*/
 /* Estilos para la card */
 .form-container {
-    max-width: 500px; /* Asegura un ancho máximo */
-    width: 100%; /* Ocupa todo el ancho disponible en pantallas más pequeñas */
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    box-sizing: border-box;
-    overflow: hidden;
-    padding: 20px; /* Añade relleno */
-    margin: 15px; /* Margen para separación en dispositivos móviles */
+  max-width: 500px; /* Asegura un ancho máximo */
+  width: 100%; /* Ocupa todo el ancho disponible en pantallas más pequeñas */
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 20px; /* Añade relleno */
+  margin: 15px; /* Margen para separación en dispositivos móviles */
 }
 
 .input-field {
-    position: relative;
-    margin-top: 8px;
-    width: 100%;
+  position: relative;
+  margin-top: 8px;
+  width: 100%;
 }
-  
+
 .input-field label {
-    position: absolute;
-    color: #8d8d8d;
-    pointer-events: none;
-    background-color: transparent;
-    left: 15px;
-    transform: translateY(0.6rem);
-    transition: all 0.3s ease;
+  position: absolute;
+  color: #8d8d8d;
+  pointer-events: none;
+  background-color: transparent;
+  left: 15px;
+  transform: translateY(0.6rem);
+  transition: all 0.3s ease;
 }
-  
+
 .input-field input,
 .input-field select {
-    padding: 10px 15px;
-    font-size: 1rem;
-    border-radius: 8px;
-    border: solid 1px #8d8d8d;
-    letter-spacing: 1px;
-    width: 100%;
+  padding: 10px 15px;
+  font-size: 1rem;
+  border-radius: 8px;
+  border: solid 1px #8d8d8d;
+  letter-spacing: 1px;
+  width: 100%;
 }
-  
+
 .input-field input:focus,
 .input-field input:valid,
 .input-field select:focus,
 .input-field select:valid {
-    outline: none;
-    border: solid 1px #001660;
+  outline: none;
+  border: solid 1px #001660;
 }
-  
+
 .input-field input:focus ~ label,
 .input-field input:valid ~ label,
 .input-field select:focus ~ label,
 .input-field select:valid ~ label {
-    transform: translateY(-51%) translateX(-10px) scale(0.8);
-    background-color: #fff;
-    padding: 0px 5px;
-    color: #0034de;
-    font-weight: bold;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 100px;
+  transform: translateY(-51%) translateX(-10px) scale(0.8);
+  background-color: #fff;
+  padding: 0px 5px;
+  color: #0034de;
+  font-weight: bold;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 100px;
 }
